@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2018 the original author or authors from the JHipster project.
+ * Copyright 2016-2019 the original author or authors from the JHipster project.
  *
  * This file is part of the JHipster project, see https://www.jhipster.tech/
  * for more information.
@@ -19,14 +19,16 @@
 
 package io.github.jhipster.config.h2;
 
+import javax.servlet.Servlet;
+import javax.servlet.ServletContext;
+import javax.servlet.ServletRegistration;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.sql.SQLException;
-import javax.servlet.*;
 
 /**
  * Utility class to configure H2 in development.
- *
+ * <p>
  * We don't want to include H2 when we are packaging for the "prod" profile and won't
  * actually need it, so we have to load / invoke things at runtime through reflection.
  */
@@ -41,7 +43,7 @@ public class H2ConfigurationHelper {
             ClassLoader loader = Thread.currentThread().getContextClassLoader();
             Class<?> serverClass = Class.forName("org.h2.tools.Server", true, loader);
             Method createServer = serverClass.getMethod("createTcpServer", String[].class);
-            return createServer.invoke(null, new Object[] { new String[] { "-tcp","-tcpAllowOthers", "-tcpPort", port } });
+            return createServer.invoke(null, new Object[]{new String[]{"-tcp", "-tcpAllowOthers", "-tcpPort", port}});
 
         } catch (ClassNotFoundException | LinkageError e) {
             throw new RuntimeException("Failed to load and initialize org.h2.tools.Server", e);
@@ -67,14 +69,14 @@ public class H2ConfigurationHelper {
             // actually need it, so we have to load / invoke things at runtime through reflection.
             ClassLoader loader = Thread.currentThread().getContextClassLoader();
             Class<?> servletClass = Class.forName("org.h2.server.web.WebServlet", true, loader);
-            Servlet servlet = (Servlet) servletClass.newInstance();
+            Servlet servlet = (Servlet) servletClass.getDeclaredConstructor().newInstance();
 
             ServletRegistration.Dynamic h2ConsoleServlet = servletContext.addServlet("H2Console", servlet);
             h2ConsoleServlet.addMapping("/h2-console/*");
             h2ConsoleServlet.setInitParameter("-properties", "src/main/resources/");
             h2ConsoleServlet.setLoadOnStartup(1);
 
-        } catch (ClassNotFoundException | LinkageError e) {
+        } catch (ClassNotFoundException | LinkageError | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException("Failed to load and initialize org.h2.server.web.WebServlet", e);
 
         } catch (IllegalAccessException | InstantiationException e) {
